added articlies link to API homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
         <h6>API Links</h6>
         <ul>
             <li><a href="/api/users/">USERS</a></li>
+            <li><a href="/api/blog/articles/">ARTICLES</a></li>
             <li><a href="/api/attendance/">ATTENDANCE</a></li>
             <li><a href="/api/administration/">ADMINISTRATION</a></li>
             <li><a href="/api/users/">ADMIN</a></li>
