--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <title>HayatulAPI</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  </head>
-  <body class="container">
-    <div>
-      <h1>Hayatul Islamiya Complex API System</h1>
 
-      <h4>Important urls</h4>
-      <div>
-        <h6>Links</h6>
-        <ul>
-            <li><a href="/admin/">ADMIN</a></li>
-        </ul>
-        <h6>API Links</h6>
-        <ul>
-            <li><a href="/api/users/">USERS</a></li>
-            <li><a href="/api/blog/articles/">ARTICLES</a></li>
-            <li><a href="/api/attendance/">ATTENDANCE</a></li>
-            <li><a href="/api/administration/">ADMINISTRATION</a></li>
-            <li><a href="/api/users/">ADMIN</a></li>
-        </ul>
-      </div>
+<head>
+  <title>HayatulAPI</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+</head>
+
+<body class="container">
+  <div>
+    <h1>Hayatul Islamiya Complex API System</h1>
+
+    <h4>Important urls</h4>
+    <div>
+      <h6>Links</h6>
+      <ul>
+        <li><a href="/admin/">ADMIN</a></li>
+      </ul>
+      <h6>API Links</h6>
+      <ul>
+        <li><a href="/api/users/">USERS</a></li>
+        <li><a href="/api/blog/articles/">ARTICLES</a></li>
+        <li><a href="/api/attendance/">ATTENDANCE</a></li>
+        <li><a href="/api/assignments/">ASSIGNMENTS</a></li>
+        <li><a href="/api/notes/">NOTES</a></li>
+        <li><a href="/api/administration/">ADMINISTRATION</a></li>
+        <li><a href="/api/users/">ADMIN</a></li>
+      </ul>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
