added changes to the finance model

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,12 @@
                 ADMINISTRATION
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/api/finance/receipts/">
+                <span data-feather="home"></span>
+                FINANCE-RECEIPTS
+              </a>
+            </li>
           </ul>
         </div>
       </nav>
